--- a/Web/Views/NaturalResource/Index.cshtml
+++ b/Web/Views/NaturalResource/Index.cshtml
@@ -36,10 +36,10 @@
                 <form method="put" id="editForm">
                     <div class="modal-body fw-bold">
                         <label for="editName" class="form-label">Name</label>
-                        <input type="text" id="editName" name="Name" minlength="1" maxlength="@DataConfig.NameLength" class="form-control">
+                        <input type="text" id="editName" name="Name" minlength="1" maxlength="@DataConfig.NameLength" class="form-control" autocomplete="off">
 
                         <label for="editDescription" class="form-label">Description</label>
-                        <input type="text" id="editDescription" name="Description" minlength="1" maxlength="@DataConfig.DescriptionLength" class="form-control">
+                        <input type="text" id="editDescription" name="Description" minlength="1" maxlength="@DataConfig.DescriptionLength" class="form-control" autocomplete="off">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -61,7 +61,7 @@
                     <div class="col-1">
                         <button type="button" onclick="showEditModal('@resource.Id', '@resource.Name', '@resource.Description')"
                                 data-bs-toggle="modal" data-bs-target="#editModal"
-                                class="btn btn-link material-symbols-outlined float-end text-decoration-none">brush</button>
+                                class="btn btn-link p-0 material-symbols-outlined float-end text-decoration-none">brush</button>
                     </div>
                     <div class="col-1">
                         <button type="button" onclick="showDeleteModal('@resource.Id', '@resource.Name')"
