--- a/Web/Views/NaturalResource/Index.cshtml
+++ b/Web/Views/NaturalResource/Index.cshtml
@@ -19,7 +19,7 @@
                         <input type="text" id="createName" name="Name" minlength="1" maxlength="@DataConfig.NameLength" class="form-control" autocomplete="off">
 
                         <label for="createDescription" class="form-label">Description</label>
-                        <input type="text" id="editDescription" name="Description" minlength="1" maxlength="@DataConfig.DescriptionLength" class="form-control" autocomplete="off">
+                        <input type="text" id="createDescription" name="Description" minlength="1" maxlength="@DataConfig.DescriptionLength" class="form-control" autocomplete="off">
 
                         <input type="hidden" id="createId" name="Id" value="0"/>
                     </div>
