--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NaturalResource" asp-action="Index">Natural Resources</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Specialty" asp-action="Index">Specialties</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
