Add edit/delete icons to country details page

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -12,6 +12,10 @@
                 <span class="material-symbols-outlined fs-2">arrow_back</span>
                 Back
             </a>
+            <span class="float-end">
+                <a asp-action="edit" asp-route-id="@Model.Name" class="material-symbols-outlined text-decoration-none">brush</a>
+                <button type="button" class="btn btn-link material-symbols-outlined text-decoration-none">delete_forever</button>
+            </span>
         </div>
     </div>
     <div class="row">
