--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -13,7 +13,7 @@
                 Back
             </a>
             <span class="float-end">
-                <a asp-action="edit" asp-route-id="@Model.Name" class="material-symbols-outlined text-decoration-none">brush</a>
+                <a asp-action="Edit" asp-route-id="@Model.Name" class="material-symbols-outlined text-decoration-none">brush</a>
                 <button type="button" class="btn btn-link material-symbols-outlined text-decoration-none">delete_forever</button>
             </span>
         </div>
