--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <form method="post" asp-action="Delete" asp-route-id="@Model.Name" id="deleteForm">
+                <form method="post" asp-action="Delete" asp-route-id="@Model.Id" id="deleteForm">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
