--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -66,7 +66,7 @@
                             </div>
                             <p class="row">
                                 <span class="col-4">
-                                <a asp-action="@battle.WinnerCharacter.Name" class="text-start text-success
+                                <a asp-action="Details" asp-route-id="@battle.WinnerCharacter.Name" class="text-start text-success
                                             @(battle.WinnerCharacter.Id == Model.Id ? "fw-bold" : "")
                                             ">@battle.WinnerCharacter.Name</a>
                                 </span>
@@ -74,7 +74,7 @@
                                 <span class="text-violet">VS</span>
                                 </span>
                                 <span class="col-4 text-end">
-                                <a asp-action="@battle.LoserCharacter.Name" class="text-danger
+                                <a asp-action="Details" asp-route-id="@battle.LoserCharacter.Name" class="text-danger
                                             @(battle.LoserCharacter.Id == Model.Id ? "fw-bold" : "")
                                             ">@battle.LoserCharacter.Name</a>
                                 </span>
