--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -5,6 +5,26 @@
     ViewData["Title"] = Model.Name;
 }
 
+<div class="modal fade" id="deleteModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">Delete the character?</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-danger fw-bold">
+                Are you sure you want to delete this character forever? This action is permanent. There's no going back.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <form method="post" asp-action="Delete" asp-route-id="@Model.Id" id="deleteForm">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container mt-1">
     <div class="row">
         <div class="col h3">
@@ -12,6 +32,10 @@
                 <span class="material-symbols-outlined fs-2">arrow_back</span>
                 Back
             </a>
+            <span class="float-end">
+                <a asp-action="Edit" asp-route-id="@Model.Name" class="material-symbols-outlined text-decoration-none">brush</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-link material-symbols-outlined text-decoration-none">delete_forever</button>
+            </span>
         </div>
     </div>
     <div class="row">
