Use textareas for descriptions

--- a/Web/Views/Country/Create.cshtml
+++ b/Web/Views/Country/Create.cshtml
@@ -18,12 +18,12 @@
         </div>
         <div class="mb-3">
             <label asp-for="Description" class="form-label">Description:</label>
-            <input asp-for="Description" class="form-control" />
+            <textarea asp-for="Description" class="form-control"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="LongDescription" class="form-label">Long description:</label>
-            <input asp-for="LongDescription" class="form-control" />
+            <textarea asp-for="LongDescription" class="form-control"></textarea>
             <span asp-validation-for="LongDescription" class="text-danger"></span>
         </div>
         <div class="mb-3">
