Fix back arrow on character details page

--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -28,7 +28,7 @@
 <div class="container mt-1">
     <div class="row">
         <div class="col h3">
-            <a href=".#@Model.Name" class="nav-link d-inline">
+            <a asp-action="Index" asp-fragment="@Model.Name" class="nav-link d-inline">
                 <span class="material-symbols-outlined fs-2">arrow_back</span>
                 Back
             </a>
